...
  "other": "Other",
  "about": "About",
  "en": "English",
  "ja": "Japanese",
  "ru": "Russian",
  "zhCN": "Simplified Chinese",
  "theme": "Theme",
  "themeDesc": "Set dark mode and adjust colors",
  "override": "Override",
  "allowLan": "Allow LAN",
  "allowLanDesc": "Allow proxy access over the LAN",
  "tun": "TUN",
  "tunDesc": "Only effective in administrator mode",
...
